Will delete laterrrrrrr ok

--- a/templates/simple-portfolio-template/index.html
+++ b/templates/simple-portfolio-template/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>A Simple Portfolio Template</title>
-    <script type="module" defer src="./js/main.js"></script>
+    <script defer src="./js/main.js"></script>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
     >
       <article class="navbar">
         <div class="flex items-center justify-between">
-          <h3 class="pt-2 text-3xl font-semibold uppercase">Willsim</h3>
+          <h3 class="pt-2 text-3xl font-semibold uppercase">OOO AHH AHH</h3>
 
           <div class="pt-2 lg:hidden">
             <button>
