--- a/templates/simple-portfolio-template/index.html
+++ b/templates/simple-portfolio-template/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>A Simple Portfolio Template</title>
-    <script defer src="./js/main.js"></script>
+    <script type="module" defer src="./js/main.js"></script>
   </head>
 
   <body>
