--- a/templates/simple-portfolio-template/index.html
+++ b/templates/simple-portfolio-template/index.html
@@ -35,7 +35,9 @@
           </div>
         </div>
 
-        <nav class="nav-items col-span-2 mt-2 hidden py-2 lg:block lg:py-5">
+        <nav
+          class="nav-items col-span-2 mt-2 hidden py-['10%'] lg:block lg:py-5"
+        >
           <ul class="flex justify-evenly gap-x-10 lg:justify-start">
             <li>
               <a href="#hero-section" class="nav-links">Home</a>
